styles/TermsAndConditions.module.css
.showcase__container{
  background-color: #3458a1;
  position: relative;
  padding-bottom: 50px;
}

.showcase__content{
  width: 90%;
  margin: auto;
  padding-top: 6%;
}

.showcase__bgImg{
  display: inline-block;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 0;
  height: 100%;
  overflow: hidden;
}


.showcase__header{
  font-size: 54px;
  color: #fff;
  padding: 0;
  margin: 0;
}

.showcase__para{
  font-size: 32px;
  color: #f7c66b;
  margin: 0;
  margin-top: 13px;
  font-family: Rubik;
  font-weight: 300;
}

.content{
  padding-bottom:30px;
}

.content__container{
  width: 90%;
  margin: auto;
  margin-top:60px;
}

.para__container{
  padding-bottom: 5px;
}

.para{
  font-family: Rubik;
  line-height: 33px;
}

